Fixed word wrapping for large captions in main menu

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -216,7 +216,6 @@
           font-size: 15px;
           font-weight: normal;
           text-transform: none;
-          white-space: nowrap;
 
           &:hover {
             color: #f23933;
